--- a/src/main/webapp/static/views/landing.html
+++ b/src/main/webapp/static/views/landing.html
@@ -685,7 +685,7 @@
 
                         <div class = "table-wrapper-scroll-y table-scrollbar">
 
-                            <table class = "table table-striped table-bordered m-0" aria-described-by = "management-requests-aria">
+                            <table class = "table table-striped table-bordered m-0" aria-describedby = "management-requests-aria">
 
                                 <thead>
                                     <tr>
@@ -721,7 +721,7 @@
 
                         <div class = "table-wrapper-scroll-y table-scrollbar">
 
-                            <table class = "table table-striped table-bordered m-0" aria-described-by = "management-employee-table-aria">
+                            <table class = "table table-striped table-bordered m-0" aria-describedby = "management-employee-table-aria">
 
                                 <thead>
                                     <tr>
