--- a/src/main/webapp/static/views/landing.html
+++ b/src/main/webapp/static/views/landing.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 
-    <div class="modal fade" id="passwordChangeModal" tabindex="-1" role="dialog" aria-labelledby="password-aria-label" aria-hidden="true">
+    <div class="modal fade" id="employee-password-change-modal" tabindex="-1" role="dialog" aria-labelledby="password-aria-label" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
 
@@ -452,7 +452,7 @@
                                 </li>
 
                                 <li class="nav-item">
-                                    <a onclick = "onNavbarEntryClickGetMyAccount(); loadMyAccount();" href = "#" data-toggle="modal" data-target="#passwordChangeModal" class="nav-link" id="navbar-change-password">
+                                    <a onclick = "onNavbarEntryClickGetMyAccount(); loadMyAccount();" href = "#" data-toggle="modal" data-target="#employee-password-change-modal" class="nav-link" id="navbar-change-password">
                                     Change Password
                                     </a>
                                 </li>
