--- a/src/main/webapp/static/css/project1.css
+++ b/src/main/webapp/static/css/project1.css
@@ -20,7 +20,7 @@
 
 .landing-navbar{
 
-    background-color: #F8F9FA;
+    background-color: #E8E9EA;
     border-right-width: 5px!important;
     border-right-color: #000000!important;
 }
@@ -33,7 +33,7 @@
 
 .landing-navbar-item{
 
-    background-color: #F8F9FA;
+    background-color: #E8E9EA;
 }
 
 .table-scrollbar{
@@ -52,3 +52,12 @@
 
     text-align: center;
 }
+
+.table-fixed-header thead th {
+
+    position: sticky!important;
+    top: 0;
+    background: #fff!important;
+}
+
+html, body {margin: 0; height: 100%; overflow: hidden}
