--- a/src/main/webapp/static/views/landing.html
+++ b/src/main/webapp/static/views/landing.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 
 </head>
-<body>
+<body id = "landing-body" hidden>
 
     <div class="modal fade" id="employee-password-change-modal" tabindex="-1" role="dialog" aria-labelledby="password-aria-label" aria-hidden="true">
         <div class="modal-dialog" role="document">
@@ -537,29 +537,32 @@
                             <h4 class = "lead text-dark" id="landing-account-user"></h4>
                         </div>
                     </div>
-                    <div class = "row">
-                        <h5 class = "col-2 text-dark lead">Username:</h5>
-                        <h5 class = "col-2 text-dark lead" id = "account-username"></h5>
-                    </div>
-                    <div class = "row">
-                        <h5 class = "col-2 text-dark lead">Password:</h5>
-                        <h5 class = "col-2 text-dark lead" id = "account-password"></h5>
-                    </div>
-                    <div class = "row">
-                        <h5 class = "col-2 text-dark lead">First Name</h5>
-                        <h5 class = "col-2 text-dark lead" id = "account-firstname"></h5>
-                    </div>
-                    <div class = "row">
-                        <h5 class = "col-2 text-dark lead">Last Name:</h5>
-                        <h5 class = "col-2 text-dark lead" id = "account-lastname"></h5>
-                    </div>
-                    <div class = "row">
-                        <h5 class = "col-2 text-dark lead">Email</h5>
-                        <h5 class = "col-2 text-dark lead" id = "account-email"></h5>
-                    </div>
-                    <div class = "row">
-                        <h5 class = "col-2 text-dark lead">Authorization</h5>
-                        <h5 class = "col-2 text-dark lead" id = "account-authority"></h5>
+
+                    <div style="text-align: center;">
+                        <div class = "row">
+                            <h5 class = "col-2 text-dark lead">Username:</h5>
+                            <h5 class = "col-2 text-dark lead" id = "account-username"></h5>
+                        </div>
+                        <div class = "row">
+                            <h5 class = "col-2 text-dark lead">Password:</h5>
+                            <h5 class = "col-2 text-dark lead" id = "account-password"></h5>
+                        </div>
+                        <div class = "row">
+                            <h5 class = "col-2 text-dark lead">First Name</h5>
+                            <h5 class = "col-2 text-dark lead" id = "account-firstname"></h5>
+                        </div>
+                        <div class = "row">
+                            <h5 class = "col-2 text-dark lead">Last Name:</h5>
+                            <h5 class = "col-2 text-dark lead" id = "account-lastname"></h5>
+                        </div>
+                        <div class = "row">
+                            <h5 class = "col-2 text-dark lead">Email</h5>
+                            <h5 class = "col-2 text-dark lead" id = "account-email"></h5>
+                        </div>
+                        <div class = "row">
+                            <h5 class = "col-2 text-dark lead">Authorization</h5>
+                            <h5 class = "col-2 text-dark lead" id = "account-authority"></h5>
+                        </div>
                     </div>
                 </div>
 
@@ -604,7 +607,7 @@
 
                         <div class = "table-wrapper-scroll-y table-scrollbar">
 
-                            <table class = "table table-striped table-bordered m-0" aria-describedby = "requests-user">
+                            <table class = "table table-striped table-bordered m-0 table-hover" aria-describedby = "requests-user">
 
                                 <thead>
                                     <tr>
@@ -642,26 +645,26 @@
                             <span class="navbar-toggler-icon"></span>
                         </button>
 
-                            <div class="collapse navbar-collapse" id="managementNavDropdown">
-                                <ul class="navbar-nav">
+                        <div class="collapse navbar-collapse" id="managementNavDropdown">
+                            <ul class="navbar-nav">
 
-                                    <li class="nav-item active">
-                                    <a id = "filter-all" class="nav-link" onclick ="onManagementFilterClick(this); filterManagementAllRequests();" href = "#">All<span class="sr-only">(current)</span></a>
-                                    </li>
+                                <li class="nav-item active">
+                                <a id = "filter-all" class="nav-link" onclick ="onManagementFilterClick(this); filterManagementAllRequests();" href = "#">All<span class="sr-only">(current)</span></a>
+                                </li>
 
-                                    <li class="nav-item">
-                                    <a class="nav-link" onclick ="onManagementFilterClick(this); filterManagementUnopenedRequests();" href = "#">Unopened</a>
-                                    </li>
+                                <li class="nav-item">
+                                <a class="nav-link" onclick ="onManagementFilterClick(this); filterManagementUnopenedRequests();" href = "#">Unopened</a>
+                                </li>
 
-                                    <li class="nav-item">
-                                    <a class="nav-link" onclick ="onManagementFilterClick(this); filterManagementPendingRequests();" href = "#">Pending</a>
-                                    </li>
+                                <li class="nav-item">
+                                <a class="nav-link" onclick ="onManagementFilterClick(this); filterManagementPendingRequests();" href = "#">Pending</a>
+                                </li>
 
-                                    <li class="nav-item">
-                                    <a class="nav-link" onclick ="onManagementFilterClick(this); filterManagementResolvedRequests();" href = "#">Resolved</a>
-                                    </li>
+                                <li class="nav-item">
+                                <a class="nav-link" onclick ="onManagementFilterClick(this); filterManagementResolvedRequests();" href = "#">Resolved</a>
+                                </li>
 
-                                </ul>
+                            </ul>
                         </div>
 
                         <form class="form-inline">
@@ -685,7 +688,7 @@
 
                         <div class = "table-wrapper-scroll-y table-scrollbar">
 
-                            <table class = "table table-striped table-bordered m-0" aria-describedby = "management-requests-aria">
+                            <table class = "table table-striped table-bordered m-0 table-hover" aria-describedby = "management-requests-aria">
 
                                 <thead>
                                     <tr>
@@ -717,11 +720,38 @@
                         </div>
                     </div>
 
+                    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #F2F2F2!important; margin: auto; width:80%!important;" id="management-filter-employee-nav" aria-labelled-by="management-filter-aria">
+
+                        <a class="navbar-brand">Employees</a>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#managementNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+
+                        <div class="collapse navbar-collapse">
+                        </div>
+
+                        <form class="form-inline">
+
+                            <div class="input-group">
+
+                                <div class="input-group-prepend">
+
+                                <span class="input-group-text" id="basic-addon1">@</span>
+                                
+                                </div>
+
+                                <input type="text" class="form-control" placeholder="Search..." aria-label="Username" aria-describedby="basic-addon1" id="management-filter-employee">
+
+                            </div>
+                        </form>
+
+                    </nav>
+
                     <div class = "row m-0">
 
                         <div class = "table-wrapper-scroll-y table-scrollbar">
 
-                            <table class = "table table-striped table-bordered m-0" aria-describedby = "management-employee-table-aria">
+                            <table class = "table table-striped table-bordered m-0 table-hover" aria-describedby = "management-employee-table-aria">
 
                                 <thead>
                                     <tr>
