--- a/src/main/webapp/static/views/landing.html
+++ b/src/main/webapp/static/views/landing.html
@@ -304,6 +304,15 @@
 
                     <div class = row>
                         <div class="col">
+                            <h4 class="lead">Approved: </h4>
+                        </div>
+                        <div class="col">
+                            <h4 class="lead" id="management-requests-modal-approved"></h4>
+                        </div>
+                    </div>
+
+                    <div class = row>
+                        <div class="col">
                             <h4 class="lead">Request Id#: </h4>
                         </div>
                         <div class="col">
