--- a/src/main/webapp/static/css/project1.css
+++ b/src/main/webapp/static/css/project1.css
@@ -20,7 +20,7 @@
 
 .landing-navbar{
 
-    background-color: #E8E9EA;
+    background-color: #F2F2F2;
     border-right-width: 5px!important;
     border-right-color: #000000!important;
 }
@@ -33,7 +33,7 @@
 
 .landing-navbar-item{
 
-    background-color: #E8E9EA;
+    background-color: #F2F2F2;
 }
 
 .table-scrollbar{
